@@ -13,6 +13,8 @@
 
 #include "http_core.h"
 #include "http_request.h"
+#include "httpd.h"
+#include "ap_release.h"
 
 #include <apr_general.h>
 #include <apr_optional.h>
@@ -28,6 +30,19 @@ APR_DECLARE_OPTIONAL_FN(void, modsec_register_variable,
      unsigned int argc_min, unsigned int argc_max,
      void *fn_validate, void *fn_generate,
      unsigned int is_cacheable, unsigned int availability));
+#endif
+
+/* ap_get_server_version() is gone in 2.3.0.
+ * It was replaced by two calls in 2.2.4 and higher:
+ *   ap_get_server_banner()
+ *   ap_get_server_description()
+ */
+#if (AP_SERVER_MAJORVERSION_NUMBER > 2) \
+    || ((AP_SERVER_MAJORVERSION_NUMBER == 2)&& (AP_SERVER_MINORVERSION_NUMBER > 2)) \
+    || ((AP_SERVER_MAJORVERSION_NUMBER == 2) && (AP_SERVER_MINORVERSION_NUMBER == 2) && (AP_SERVER_PATCHLEVEL_NUMBER >= 4))
+#define apache_get_server_version() ap_get_server_banner()
+#else
+#define apache_get_server_version() ap_get_server_version()
 #endif
 
 
